--- a/fermat/testsuites/Makefile
+++ b/fermat/testsuites/Makefile
@@ -11,6 +11,7 @@ CHECK_TS ?=
 
 OBJS = vec4.o vec3.o vec2.o quat.o pc3.o \
        mat3.o mat4.o cubes3.o cubes2.o mesh3.o nearest.o \
+       fibo.o \
        data-vec2.o data-vec3.o data-quat.o data-vec4.o \
        data-mat3.o data-mat4.o
 BENCH_OBJS =
