--- a/fermat/Makefile
+++ b/fermat/Makefile
@@ -30,6 +30,7 @@ OBJS += predicates.o
 OBJS += cubes2.o cubes3.o nearest-linear.o
 OBJS += mesh3.o qhull.o
 OBJS += fibo.o pairheap.o
+OBJS += dij.o
 OBJS += gsrm.o
 
 # header files that must be generated
