--- a/gann/Makefile
+++ b/gann/Makefile
@@ -19,7 +19,7 @@
 CFLAGS += -I. -I../fermat
 LDFLAGS += -L. -lgann -L../fermat -lfermat -lm -lrt
 
-BIN_TARGETS = gann-gng-2d gann-gng-3d
+BIN_TARGETS = gann-gng-2d gann-gng-3d gann-plan-2d
 
 TARGETS = libgann.a
 OBJS  = net.o
