--- a/fermat/Makefile
+++ b/fermat/Makefile
@@ -27,7 +27,7 @@ OBJS += vec4.o vec3.o vec2.o
 OBJS += mat4.o mat3.o
 OBJS += pc2.o pc3.o pc4.o pc-internal.o
 OBJS += predicates.o
-OBJS += cubes2.o cubes3.o nearest-linear.o
+OBJS += cubes2.o cubes3.o nncells.o nearest-linear.o
 OBJS += mesh3.o qhull.o
 OBJS += fibo.o pairheap.o
 OBJS += dij.o
