Removed dependecies on GSL.

--- a/fermat/testsuites/Makefile
+++ b/fermat/testsuites/Makefile
@@ -14,18 +14,12 @@ CHECK_TS ?=
 
 TARGETS = test bench-heap test-rand-mt test-nn
 BENCH_HEAP = bench-heap-fibo bench-heap-pairheap
-OBJS = vec4.o vec3.o vec2.o quat.o pc3.o \
+OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o \
        mat3.o mat4.o cubes3.o cubes2.o nncells.o mesh3.o nearest.o \
        fibo.o pairheap.o dij.o \
        data-vec2.o data-vec3.o data-quat.o data-vec4.o \
        data-mat3.o data-mat4.o
 BENCH_OBJS =
-
-ifeq '$(USE_GSL)' 'yes'
-#OBJS += vec.o mat.o
-  CFLAGS += $(GSL_CFLAGS)
-  LDFLAGS += $(GSL_LDFLAGS)
-endif
 
 
 all: $(TARGETS)
