SurfMatch: Added test application into testsuites dir.

--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -3,7 +3,7 @@ ifneq '$(DEBUG)' 'no'
   DEBUG := yes
 endif
 
--include ../../Makefile.include
+-include ../Makefile.include
 
 CFLAGS += -I./ -I../ -Icu/
 LDFLAGS += -L./ -Lcu/ -lcu -lrt -lm -L../ -lfermat
@@ -12,7 +12,7 @@ CFLAGS_BENCH += $(CFLAGS) -O3 -funroll-loops -funsafe-loop-optimizations -fira-l
 CHECK_REG=cu/check-regressions
 CHECK_TS ?=
 
-TARGETS = test bench-heap test-rand-mt test-nn
+TARGETS = test bench-heap test-rand-mt test-nn test-surf-match
 BENCH_HEAP = bench-heap-fibo bench-heap-pairheap
 OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o \
        mat3.o mat4.o cubes3.o cubes2.o nncells.o mesh3.o nearest.o \
@@ -35,6 +35,9 @@ test-rand-mt: test-rand-mt.c
 
 test-nn: test-nn.c
 	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
+
+test-surf-match: test-surf-match.c
+	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS) $(OPENCL_LDFLAGS)
 
 bench-heap: $(BENCH_HEAP)
 bench-heap-fibo: bench-heap-fibo.c bench-heap.c
