--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -12,7 +12,11 @@ CFLAGS_BENCH += $(CFLAGS) -O3 -funroll-loops -funsafe-loop-optimizations -fira-l
 CHECK_REG=cu/check-regressions
 CHECK_TS ?=
 
-TARGETS = test bench-heap test-rand-mt test-nn test-surf-match
+TARGETS = test bench-heap test-rand-mt test-nn
+ifeq '$(USE_OPENCL)' 'yes'
+  TARGETS += test-surf-match
+endif
+
 BENCH_HEAP = bench-heap-fibo bench-heap-pairheap
 OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o \
        mat3.o mat4.o cubes3.o cubes2.o nncells.o mesh3.o nearest.o \
