--- a/Makefile.include
+++ b/Makefile.include
@@ -20,6 +20,8 @@ NVCC ?= nvcc
 M4 ?= m4
 SED ?= sed
 PYTHON ?= python
+PYTHON2 ?= python2
+PYTHON3 ?= python3
 
 PYTHON_CONFIG ?= python-config
 
@@ -149,6 +151,8 @@ showvars:
 	@echo "M4      = $(M4)"
 	@echo "SED     = $(SED)"
 	@echo "PYTHON  = $(PYTHON)"
+	@echo "PYTHON2 = $(PYTHON2)"
+	@echo "PYTHON3 = $(PYTHON3)"
 	@echo ""
 	@echo "PYTHON_CONFIG  = $(PYTHON_CONFIG)"
 	@echo ""
