Cython: Added Vec2 class.

--- a/cython/Makefile
+++ b/cython/Makefile
@@ -56,7 +56,7 @@ fermat.so: $(OBJS)
 %.c: %.pyx
 	$(CYTHON) $(CYTHON_FLAGS) -o $@ $<
 
-fermat.pyx: core.pxd rand.pxd rand_mt.pxd timer.pxd
+fermat.pyx: core.pxd rand.pxd rand_mt.pxd timer.pxd vec2.pxd
 	touch $@
 
 
