--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -22,7 +22,7 @@ OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o \
        mat3.o mat4.o cubes3.o cubes2.o nncells.o mesh3.o nearest.o \
        fibo.o pairheap.o dij.o obb.o \
        data-vec2.o data-vec3.o data-quat.o data-vec4.o \
-       data-mat3.o data-mat4.o
+       data-mat3.o data-mat4.o bunny.o
 BENCH_OBJS =
 
 
