--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -7,18 +7,18 @@ endif
 
 CFLAGS += -I./ -I../ -Icu/
 CXXFLAGS += -I./ -I../ -Icu/
-LDFLAGS += -L./ -Lcu/ -lcu -lrt -lm -L../ -lfermat
+LDFLAGS += -L./ -ldata -Lcu/ -lcu -lrt -lm -L../ -lfermat
 CFLAGS_BENCH += $(CFLAGS) -O3 -funroll-loops -funsafe-loop-optimizations -fira-loop-pressure
 
 CHECK_REG=cu/check-regressions
 CHECK_TS ?=
 
-TARGETS = test bench-heap test-rand-mt test-nn
+TARGETS = libdata.a test bench-heap test-rand-mt test-nn
 ifeq '$(USE_OPENCL)' 'yes'
   TARGETS += test-surf-match
 endif
 
-TARGETS += test-cd-spheres
+TARGETS += test-cd-spheres test-cd-trimesh
 
 
 USE_OZCOLLIDE = yes
@@ -37,19 +37,23 @@ endif
 BENCH_HEAP = bench-heap-fibo bench-heap-pairheap
 OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o \
        mat3.o mat4.o cubes3.o cubes2.o nncells.o mesh3.o nearest.o \
-       fibo.o pairheap.o dij.o cd.o cd-sphere-grid.o chull3.o \
-       data-vec2.o data-vec3.o data-quat.o data-vec4.o \
-       data-mat3.o data-mat4.o bunny.o \
-	   data-protein-big.o data-protein-small.o
+       fibo.o pairheap.o dij.o cd.o cd-sphere-grid.o chull3.o
+OBJS_DATA = data-vec2.o data-vec3.o data-quat.o data-vec4.o \
+            data-mat3.o data-mat4.o data-bunny.o \
+			data-protein-big.o data-protein-small.o
 BENCH_OBJS =
 
 
 all: $(TARGETS)
 
-test: cu $(OBJS) main.c
+libdata.a: $(OBJS_DATA)
+	ar cr $@ $^
+	ranlib $@
+
+test: cu libdata.a $(OBJS) main.c
 	$(CC) $(CFLAGS) -o $@ main.c $(OBJS) $(LDFLAGS)
-bench: cu bench.c data-vec3.o data-quat.o
-	$(CC) $(CFLAGS_BENCH) -o $@ bench.c data.o $(LDFLAGS)
+bench: cu bench.c libdata.a
+	$(CC) $(CFLAGS_BENCH) -o $@ bench.c $(LDFLAGS)
 	$(CC) $(CFLAGS_BENCH) -S -c -o $@.s bench.c
 
 test-rand-mt: test-rand-mt.c
@@ -61,8 +65,10 @@ test-nn: test-nn.c
 test-surf-match: test-surf-match.c
 	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS) $(OPENCL_LDFLAGS)
 
-test-cd-spheres: test-cd-spheres.cpp data-protein-big.o data-protein-small.o
-	$(CXX) $(CXXFLAGS) $(OZCOLLIDE_CFLAGS) -o $@ $^ $(LDFLAGS) $(OZCOLLIDE_LDFLAGS)
+test-cd-spheres: test-cd-spheres.cpp libdata.a
+	$(CXX) $(CXXFLAGS) $(OZCOLLIDE_CFLAGS) -o $@ $< $(LDFLAGS) $(OZCOLLIDE_LDFLAGS)
+test-cd-trimesh: test-cd-trimesh.cpp libdata.a
+	$(CXX) $(CXXFLAGS) $(RAPID_CFLAGS) -o $@ $^ $(LDFLAGS) $(RAPID_LDFLAGS)
 
 bench-heap: $(BENCH_HEAP)
 bench-heap-fibo: bench-heap-fibo.c bench-heap.c
