--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -7,7 +7,7 @@ endif
 
 CFLAGS += -I./ -I../ -Icu/
 CXXFLAGS += -I./ -I../ -Icu/
-LDFLAGS += -L./ -ldata -Lcu/ -lcu -lrt -lm -L../ -lfermat
+LDFLAGS += -L./ -ldata -Lcu/ -lcu -lrt -lm -L../ -lfermat -pthread
 CFLAGS_BENCH += $(CFLAGS) -O3 -funroll-loops -funsafe-loop-optimizations -fira-loop-pressure
 
 CHECK_REG=cu/check-regressions
