GNG2 built on top of GNG.

--- a/Makefile.include
+++ b/Makefile.include
@@ -54,8 +54,8 @@ ifeq '$(PROFIL)' 'yes'
 endif
 
 ifeq '$(DEBUG)' 'yes'
-  CFLAGS = -g -Wno-unused-function
-  CXXFLAGS = -g -Wno-unused-function
+  CFLAGS = -g
+  CXXFLAGS = -g
   CONFIG_FLAGS += -DDEBUG
 else
   # force to use optimizations
@@ -70,6 +70,10 @@ endif
 ifneq '$(NOWALL)' 'yes'
   CFLAGS += -Wall
   CXXFLAGS += -Wall
+  ifeq '$(DEBUG)' 'yes'
+    CFLAGS += -Wno-unused-function
+    CXXFLAGS += -Wno-unused-function
+  endif
 endif
 ifneq '$(NOPEDANTIC)' 'yes'
   CFLAGS += -pedantic
