--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -42,7 +42,7 @@ endif
 
 BENCH_HEAP = bench-heap-fibo bench-heap-pairheap
 OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o pc.o \
-       mat3.o mat4.o cubes3.o cubes2.o nncells.o mesh3.o nearest.o \
+       mat3.o mat4.o cubes3.o cubes2.o gug.o mesh3.o nearest.o \
        fibo.o pairheap.o dij.o cd.o cd-sphere-grid.o chull3.o \
        tasks.o task-pool.o vptree.o
 OBJS_DATA = data-vec2.o data-vec3.o data-quat.o data-vec4.o \
