Fixed dependency on OpenCL and fixed LDFLAGS in Makefile.include.

--- a/Makefile.include
+++ b/Makefile.include
@@ -155,6 +155,7 @@ OZCOLLIDE_LDFLAGS ?= -lozcollide
 ifneq '$(CC_NOT_GCC)' 'yes'
   CFLAGS += -std=gnu99 -ffast-math -O3
 endif
+LDFLAGS += -pthread
 LDFLAGS += $(SYSTEM_LDFLAGS)
 
 
