Added module opts.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -9,6 +9,7 @@ BUILDDIR      = .
 RSTS  = core compiler alloc
 RSTS += list rand rand-mt timer parse
 RSTS += cfg
+RSTS += opts
 
 RSTS += vec4 vec3 vec2 vec
 RSTS += quat
