Turned off -O3 in debug mode.

--- a/Makefile.include
+++ b/Makefile.include
@@ -167,7 +167,7 @@ OZCOLLIDE_LDFLAGS ?= -lozcollide
 
 
 ifneq '$(CC_NOT_GCC)' 'yes'
-  CFLAGS += -std=gnu99 -ffast-math -O3
+  CFLAGS += -std=gnu99 -ffast-math
 endif
 LDFLAGS += -pthread
 LDFLAGS += $(SYSTEM_LDFLAGS)
