--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,9 @@ examples/cd-trimesh-collision
 examples/ga-knapsack
 examples/ga-knapsack2
 examples/kohonen-simple
+examples/nnbp-simple
+examples/nnbp-img
+examples/gng-eu
+examples/gng-t
+examples/prm-6d
 
